--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/ui": "^4.2",
         "maatwebsite/excel": "^3.1",
         "milon/barcode": "^10.0",
+        "realrashid/sweet-alert": "^6.0",
         "yaza/laravel-google-drive-storage": "^1.1"
     },
     "require-dev": {
